# ml_algos

./: .gitignore  Decision Tree.ipynb  Gradient Boosting.ipynb  Logistic Regression.ipynb  Multi Head Attention.ipynb  PageRank.ipynb  Regression.ipynb  Support Vector Machine.ipynb  main.py  pyproject.toml
transformers/: 01_Self-Attention.ipynb  02_Multi Head Attention.ipynb  03_Positional Encoding.ipynb  04_Layer Normalization.ipynb  05_Summing up the Encoder.ipynb  Transformers.ipynb  model.py
