[project]
name = "ml-algos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyvis>=0.3.2",
    "scikit-network>=0.33.1",
    "torch>=2.6.0",
]
